add singlecellanim to cmakelists

--- a/Tutorials/CMakeLists.txt
+++ b/Tutorials/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(SingleCell)
 add_subdirectory(Doublet)
 add_subdirectory(TissueSimulation)
+add_subdirectory(SingleCellAnim)
 # add_subdirectory(postprocess)
 # add_subdirectory(LumenInflation)
